# vision-based-search-drones

./: .gitignore  .pre-commit-config.yaml  README.md  pack_results.py  pyproject.toml
BPLA_alex/: ONNXtoRKNN.ipynb  train_yolov8_bpla.ipynb
BPLA_alex/base/: __init__.py  orange.py
base/: __init__.py  camera.py  orange.py  rtsp_and_gps.py
configs/: data.yaml  inference.yaml  main.yaml  model.yaml  training.yaml
src/: __init__.py  camera.py  cli.py  main.py  models.py  rtsp_and_gps.py  training.py
src/inference/: post_process.py
src/models/: __init__.py  models.py
utils/: post_process.py
